--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,14 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
+
+  webserver:
+    image: nginx:latest
+    ports:
+      - 8000:80
+      - 4000:443
+    restart: always
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
